--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ build/
 ## Environment normalisation:
 /.bundle/
 /lib/bundler/man/
-
+.idea
 # for a library or gem, you might want to ignore these files since the code is
 # intended to run in multiple environments; otherwise, check them in:
 # Gemfile.lock
